--- a/styles/scss/_headernav.scss
+++ b/styles/scss/_headernav.scss
@@ -96,7 +96,8 @@ div#nav-links > ul > li#dropdown-parent > ul#dropdown-items {
 	padding: 0;
 	background-color: #fff;
 	width: 35.7rem;
-	right: 3rem;
+	// right: 3rem;
+	left: 0rem;
 	height: 21.6rem;
 	top: 7.8rem;
 	font-size: 3rem;
