--- a/styles/scss/_ripplecontent.scss
+++ b/styles/scss/_ripplecontent.scss
@@ -110,10 +110,12 @@ section#ripple > div#ripple-section-three > div.wrapper > div#ripple-content-con
 
 //placeholder styling for ripple onboarding 
 section#ripple > div#ripple-section-three > div.wrapper > div#ripple-content-container > div.placeholder3 {
-	width: 96rem;
-	height: 54rem;
-	background-color: grey;
+	// width: 96rem;
+	// height: 54rem;
+	// background-color: grey;
+	text-align: center;
 	margin-bottom: 12rem;
+	margin-top: 5rem;
 }
 
 //ripple links
